refactor project structure and dependencies
compatible with java 17